--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -8,7 +8,7 @@
     <base href="/" />
     <link rel="stylesheet" href="app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="manifest.webmanifest" rel="manifest" />
+    <link href="manifest.json" rel="manifest" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
